# python-automation-aws-costs

./: Dockerfile  Jenkinsfile  Jenkinsfile_build  pyproject.toml  readme.md
src/aws_costs/: aws_cost_report.py
tests/: test_aws_cost_report.py
